version 1 (code with all tests)